--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  calendar_timeline: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  provider: ^6.0.5
+  flutter_slidable: ^2.0.0
+  firebase_core: ^2.5.0
+  cloud_firestore: ^4.3.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -58,6 +62,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
